crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_markdown_list_collapses_multiline_linked_type_parameter_defaults.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/boolean.md =====
# Function: boolean()

## Signature

```ts
export function boolean(): void
```
===== combinators/functions/make.md =====
# Function: make()

Make.

## Signature

```ts
export function make(): void
```

## Type Parameters

- `Extension`
- `ResolvedDepExtensions`
- `PluginExt` *extends* [`PluginExtension`](../type-aliases/PluginExtension.md)\<`Extension`, [`DefaultGunshiParams`](../type-aliases/DefaultGunshiParams.md)\> = [`PluginExtension`](../type-aliases/PluginExtension.md)\<`Extension`, `ResolvedDepExtensions`\>
===== combinators/functions/number.md =====
# Function: number()

## Signature

```ts
export function number(): void
```
===== combinators/functions/string.md =====
# Function: string()

## Signature

```ts
export function string(): void
```
===== combinators/index.md =====
# combinators

_13 symbols · 4 functions · 9 types_

## Functions

- [boolean](./functions/boolean.md)
- [make](./functions/make.md) - Make.
- [number](./functions/number.md)
- [string](./functions/string.md)

## Type Aliases

- [ArgExplicitlyProvided](./type-aliases/ArgExplicitlyProvided.md)
- [ArgValues](./type-aliases/ArgValues.md)
- [CommandRunner](./type-aliases/CommandRunner.md)
- [DefaultGunshiParams](./type-aliases/DefaultGunshiParams.md)
- [GunshiParamsConstraint](./type-aliases/GunshiParamsConstraint.md)
- [PluginExtension](./type-aliases/PluginExtension.md)
- [RenderingOptions](./type-aliases/RenderingOptions.md)
- [SubCommandable](./type-aliases/SubCommandable.md)
- [U](./type-aliases/U.md)

===== combinators/type-aliases/ArgExplicitlyProvided.md =====
# Type Alias: ArgExplicitlyProvided

===== combinators/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

===== combinators/type-aliases/CommandRunner.md =====
# Type Alias: CommandRunner

===== combinators/type-aliases/DefaultGunshiParams.md =====
# Type Alias: DefaultGunshiParams

===== combinators/type-aliases/GunshiParamsConstraint.md =====
# Type Alias: GunshiParamsConstraint

===== combinators/type-aliases/PluginExtension.md =====
# Type Alias: PluginExtension

===== combinators/type-aliases/RenderingOptions.md =====
# Type Alias: RenderingOptions

===== combinators/type-aliases/SubCommandable.md =====
# Type Alias: SubCommandable

===== combinators/type-aliases/U.md =====
# Type Alias: U

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 13 symbols · 4 functions · 9 types_

## Modules

- [combinators](./combinators/index.md)
