crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_markdown_renders_return_type_literal_members.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/boolean.md =====
# Function: boolean()

## Signature

```ts
export function boolean(): void
```
===== combinators/functions/number.md =====
# Function: number()

## Signature

```ts
export function number(): void
```
===== combinators/functions/resolveArgs.md =====
# Function: resolveArgs()

Resolve.

## Signature

```ts
export function resolveArgs(): void
```

## Returns

`object` — Resolved args.

### error

```ts
error: AggregateError | undefined;
```

### explicit

```ts
explicit: ArgExplicitlyProvided<A>;
```

### positionals

```ts
positionals: string[];
```

### values

```ts
values: ArgValues<A>;
```
===== combinators/functions/string.md =====
# Function: string()

## Signature

```ts
export function string(): void
```
===== combinators/index.md =====
# combinators

_13 symbols · 4 functions · 9 types · 1 returns_

## Functions

- [boolean](./functions/boolean.md)
- [number](./functions/number.md)
- [resolveArgs](./functions/resolveArgs.md) - Resolve.
- [string](./functions/string.md)

## Type Aliases

- [ArgExplicitlyProvided](./type-aliases/ArgExplicitlyProvided.md)
- [ArgValues](./type-aliases/ArgValues.md)
- [CommandRunner](./type-aliases/CommandRunner.md)
- [DefaultGunshiParams](./type-aliases/DefaultGunshiParams.md)
- [GunshiParamsConstraint](./type-aliases/GunshiParamsConstraint.md)
- [PluginExtension](./type-aliases/PluginExtension.md)
- [RenderingOptions](./type-aliases/RenderingOptions.md)
- [SubCommandable](./type-aliases/SubCommandable.md)
- [U](./type-aliases/U.md)

===== combinators/type-aliases/ArgExplicitlyProvided.md =====
# Type Alias: ArgExplicitlyProvided

===== combinators/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

===== combinators/type-aliases/CommandRunner.md =====
# Type Alias: CommandRunner

===== combinators/type-aliases/DefaultGunshiParams.md =====
# Type Alias: DefaultGunshiParams

===== combinators/type-aliases/GunshiParamsConstraint.md =====
# Type Alias: GunshiParamsConstraint

===== combinators/type-aliases/PluginExtension.md =====
# Type Alias: PluginExtension

===== combinators/type-aliases/RenderingOptions.md =====
# Type Alias: RenderingOptions

===== combinators/type-aliases/SubCommandable.md =====
# Type Alias: SubCommandable

===== combinators/type-aliases/U.md =====
# Type Alias: U

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 13 symbols · 4 functions · 9 types · 1 returns_

## Modules

- [combinators](./combinators/index.md)
