crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_markdown_return_union_pipe_is_not_escaped_inside_inline_code.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run the command.

## Signature

```ts
export function cli(entry: Command<G> | CommandRunner<G>): Promise<string | undefined>
```

## Parameters

| Name | Type | Description |
| --- | --- | --- |
| `entry` | `Command<G> \| CommandRunner<G>` |  |

## Returns

`Promise<string | undefined>` — A rendered usage or undefined.
===== default/index.md =====
# default

_1 symbols · 1 functions · 1 parameters · 1 returns_

## Functions

- [cli](./functions/cli.md) - Run the command.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions · 1 parameters · 1 returns_

## Modules

- [default](./default/index.md)
