crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_marks_experimental_members_in_table.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_1 symbols · 1 interfaces · 1 members_

## Interfaces

- [StringOptions](./interfaces/StringOptions.md) - String options.

===== combinators/interfaces/StringOptions.md =====
# Interface: StringOptions

String options.

## Signature

```ts
export function StringOptions(): void
```

## Properties

- `minLength` _(optional)_ `property` `number` - **Experimental.** Minimum string length.
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces · 1 members_

## Modules

- [combinators](./combinators/index.md)
