crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_member_table_drops_kind_for_named_groups.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

_1 symbols · 1 interfaces · 1 members_

## Interfaces

- [Command](./interfaces/Command.md) - A command.

===== combinators/interfaces/Command.md =====
# Interface: Command

A command.

## Signature

```ts
export function Command(): void
```

## Properties

| Name | Type | Description |
| --- | --- | --- |
| `name` | `unknown` |  |
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 interfaces · 1 members_

## Modules

- [combinators](./combinators/index.md)
