crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_module_index_collapses_overloads_to_one_row.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/cli.md =====
# Function: cli()

<div id="cli" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__section ox-api-entry__section--call-signature">
<h4>Call Signature</h4>
<pre><code class="language-typescript">export function cli(): void</code></pre>
<div class="ox-api-entry__prose">
<p>Run the command.</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--call-signature">
<h4>Call Signature</h4>
<pre><code class="language-typescript">export function cli(): void</code></pre>
<div class="ox-api-entry__prose">
<p>Run the command.</p>
</div>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [cli](./functions/cli.md) | Run the command. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
</div>

## Modules

- [default](./default/index.md)
