crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_module_index_escapes_pipes_in_table_cells.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/toUnion.md =====
# Function: toUnion()

<div id="tounion" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Returns A | B.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function toUnion(): void</code></pre>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [toUnion](./functions/toUnion.md) | Returns A \| B. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
</div>

## Modules

- [default](./default/index.md)
